--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node ./dist/index.js",
     "dev": "nodemon",
     "build": "tsc",
-    "postinstall": "prisma generate"
+    "postinstall": "npx prisma generate"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
